--- a/wtp/values.yaml
+++ b/wtp/values.yaml
@@ -5,6 +5,7 @@
 nameOverride: ""
 fullnameOverride: ""
 
+# Overrides registry credential.
 imageCredentials:
   registry: dhiacrdev.azurecr.io
   username: dhiacrdev
@@ -23,51 +24,44 @@ wtpdb:
       tag: ""
       pullPolicy: IfNotPresent
   service:
-    type: LoadBalancer
+    type: ClusterIP
     port: 5432
    
-
 wtpapi:
   replicaCount: 1
+    # Overrides the image version.
   image:
     repository: dhiacrdev.azurecr.io/wrd/waterdss-portal-api
     pullPolicy: IfNotPresent
-    # Overrides the image tag whose default is the chart appVersion.
     tag: "20240520.1-dev"
-    registry:
-      username: dhiacrdev
-      password: 5+OOK6govNjw2EeSZqvLopI9Swrr4FGt
   containerPort: 80
-  # imagePullSecrets: [
-  #   name: dhiacr
-  # ]
   envs:
     - name: ASPNETCORE_ENVIRONMENT
       value: "Development"
     - name: ConnectionStrings__Default
       value: "Host=dhiwtp-db-svc;Port=5432;Username=postgres;Password=1234;Database=wrddevdb;Include Error Detail=true;"
     - name: App__CorsOrigins
-      value: "https://wtp-frontend.test.com,http://wtp-api.test.com,https://mikemine-result.azurewebsites.net,https://mikemine.azurewebsites.net,https://mikemine-dashboard.azurewebsites.net,https://mikeminedev-result-dev.azurewebsites.net,https://mikeminedev-dashboard.azurewebsites.net,https://mikeminedev-dev.azurewebsites.net,https://datamanagement-app.azurewebsites.net,https://waterdss-wrd-dev.eu.mike-cloud-dev.com,https://mike-mine.mike-cloud-dev.com,http://localhost:1338,http://localhost:1337,http://localhost:1339,http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000,https://localhost:3000,https://localhost:3001,http://localhost:3002/,https://nile-hp-optimization-dss.westeurope.cloudapp.azure.com,https://mrc-planning-staging.westeurope.cloudapp.azure.com,https://odss.uegcl.go.ug:50004,https://mrc-training-1.westeurope.cloudapp.azure.com,https://mrc-training-2.westeurope.cloudapp.azure.com,https://mrc-training-3.westeurope.cloudapp.azure.com,https://mrc-training-4.westeurope.cloudapp.azure.com,https://waterdss-mrc.azurewebsites.net"
+      value: "https://wtp-frontend.hii.or.th,https://wtp-routerapi.hii.or.th,https://wtp-api.hii.or.th"
     - name: App__WebUrl
-      value: "https://wtp-frontend.test.com,"
+      value: "https://wtp-frontend.hii.or.th,"
     - name: PortalInfo__Container
-      value: "http://wtp-routerapi.test.com"
+      value: "https://wtp-routerapi.hii.or.th"
     - name: PortalInfo__Url
-      value: "http://wtp-routerapi.test.com"
+      value: "https://wtp-routerapi.hii.or.th"
     - name: Authentication__OpenId__ClientId
       value: "Water Tools"
     - name: Authentication__OpenId__Authority
-      value: "https://login.mike-cloud-dev.com"
+      value: ""
     - name: Authentication__OpenId__Api
-      value: "https://api.mike-cloud-dev.com"
+      value: ""
     - name: PortalInfo__WorkspaceLandingPage
-      value: "https://wtp-frontend.test.com/portal/workspaces/{0},https://mike-mine.mike-cloud-dev.comportal/workspaces/{0}"
+      value: "https://wtp-frontend.hii.or.th/portal/workspaces/{0}"
     - name: PortalInfo__Dissemination__UnsubscribeLink
       value: "/subscriptions/unsubscribe?token={token}"
     - name: PortalInfo__Dissemination__ApprovalLink
       value: "/product/{product_id}/approval"
     - name: Authentication__JwtBearer__Issuer
-      value: "https://wtp-frontend.test.com,https://mike-mine.mike-cloud-dev.com"
+      value: "https://wtp-frontend.hii.or.th"
     - name: Authentication__JwtBearer__SecurityKey
       value: "WaterDssPortal_C421AAEE0D114E9CA"
     - name: Authentication__JwtBearer__IsEnabled
@@ -83,11 +77,11 @@ wtpapi:
     - name: Token__Key
       value: "Rahasia7xBro?!"
     - name: Token__Issuer
-      value: "https://wtp-frontend.test.com,https://mike-mine.mike-cloud-dev.com"
+      value: "https://wtp-frontend.hii.or.th"
     - name: Token__Expire
       value: "2"
     - name: Token__Audience
-      value: "https://wtp-frontend.test.com,https://mike-mine.mike-cloud-dev.com"
+      value: "https://wtp-frontend.hii.or.th"
     - name: Authentication__OpenId__ClientSecret
       value: ""
     - name: DeploymentType
@@ -97,9 +91,9 @@ wtpapi:
     - name: PassPhrase
       value: "wrddev_portal_key"
     - name: DomainServices__Username
-      value: portal_admin
+      value: demo_admin_to_be_deleted
     - name: DomainServices__Password
-      value: a28iDEBf2F1p7C79qn4m       
+      value: webapi       
     - name: Authentication__OpenId__ValidateIssuer
       value: "true"
     - name: Authentication__OpenId__Scope
@@ -141,7 +135,6 @@ wtpapi:
   affinity: {}
 
   service:
-    # name: wtp-api-svc
     type: ClusterIP    
     ports:
       - name: http
@@ -151,6 +144,7 @@ wtpapi:
 
 wtprouterapi:
   replicaCount: 1
+    # Overrides the image version.
   image:
     repository: dhiacrdev.azurecr.io/wrd/waterdss-portal-api-rerouter
     pullPolicy: IfNotPresent
@@ -159,7 +153,7 @@ wtprouterapi:
     - name: ASPNETCORE_ENVIRONMENT
       value: "Production"
     - name: CORS_ORIGINS
-      value: "https://wtp-frontend.test.com"
+      value: "https://wtp-frontend.hii.or.th"
     - name: OCELOT_DOWNSTREAM_SCHEME
       value: "http"
     - name: OCELOT_DOWNSTREAM_HOST
@@ -180,13 +174,11 @@ wtprouterapi:
 
 frontend:
   replicaCount: 1
+    # Overrides the image version.
   image:
     repository: dhiacrdev.azurecr.io/wrd/wrd-mike-mine
     pullPolicy: IfNotPresent
     tag: "20240517.2-dev"
-  # imagePullSecrets: [
-  #   name: dhiacr
-  # ]
   containerPorts: 
     - name: http
       containerPort: 80
@@ -199,25 +191,25 @@ frontend:
     - name: Applications
       value: "mine;mine-result;mine-dashboard;subscriptions;workspaces;datamanagement;waterstatus;planningtools;mine-reco;mine-dama"
     - name: DefaultBaseURL
-      value: "https://wtp-api.test.com"
+      value: "https://wtp-api.hii.or.th"
     - name: DefaultBaseURLOld
-      value: "https://wtp-routerapi.test.com"
+      value: "https://wtp-routerapi.hii.or.th"
     - name: DefaultBaseURLGateway
-      value: "https://wtp-routerapi.test.com"
+      value: "https://wtp-routerapi.hii.or.th"
     - name: DefaultDomainServicesURL
-      value: "https://domainservices-wrd-dev.eu.mike-cloud-dev.com"
+      value: "https://wtp-dsapi.hii.or.th"
     - name: DefaultBaseURLPy
-      value: "https://wrdmainservices-wrd-dev.eu.mike-cloud-dev.com"
+      value: "https://wtp-pyapi.hii.or.th"
     - name: ClientId
       value: "Water Tools"
     - name: Authority
       value: "https://login.mike-cloud-dev.com"
     - name: ContentDefaultSource
-      value: "wtp-frontend.test.com;domainservices-wrd-dev.eu.mike-cloud-dev.com;api.mapbox.com;nile-hp-optimization-dss.westeurope.cloudapp.azure.com;mapsapp.azurewebsites.net;simulations.azurewebsites.net;eramet-dss.azurewebsites.net;flowforecasting.azurewebsites.net;www.youtube.com;datamanagement-app.azurewebsites.net;datamanagement-app.azurewebsites.net;mrc-planning-staging.westeurope.cloudapp.azure.com;odss.uegcl.go.ug;mrc-training-1.westeurope.cloudapp.azure.com;mrc-training-2.westeurope.cloudapp.azure.com;mrc-training-3.westeurope.cloudapp.azure.com;mrc-training-4.westeurope.cloudapp.azure.com"
+      value: "wtp-frontend.hii.or.th;wtp-dsapi.hii.or.th;api.mapbox.com;mapsapp.azurewebsites.net;simulations.azurewebsites.net;www.youtube.com"
     - name: ContentConnectSource
-      value: "login.mike-cloud-dev.com;wtp-api.test.com;wtp-routerapi.test.com;;domainservices-wrd-dev.eu.mike-cloud-dev.com;api.mapbox.com;events.mapbox.com;mrc-waterstatus-api.azurewebsites.net;wrd-geoserver-dev.azurewebsites.net;ipv4.icanhazip.com;mrc-waterstatus-api-dev.azurewebsites.net;dhigroup.matomo.cloud;odss.uegcl.go.ug; data:"
+      value: "login.mike-cloud-dev.com;wtp-api.hii.or.th;wtp-routerapi.hii.or.th;wtp-dsapi.hii.or.th;api.mapbox.com;events.mapbox.com;wtp-geoserver.hii.or.th;ipv4.icanhazip.com;dhigroup.matomo.cloud; data:"
     - name: ContentImageSource
-      value: "wtp-api.test.com;wtp-routerapi.test.com;api.mapbox.com;a.basemaps.cartocdn.com;b.basemaps.cartocdn.com;c.basemaps.cartocdn.com;d.basemaps.cartocdn.com"
+      value: "wtp-api.hii.or.th;wtp-routerapi.hii.or.th;api.mapbox.com;a.basemaps.cartocdn.com;b.basemaps.cartocdn.com;c.basemaps.cartocdn.com;d.basemaps.cartocdn.com"
     - name: ContentScriptSource
       value: "www.youtube.com;unpkg.com;api.mapbox.com;dhigroup.matomo.cloud "
     - name: ContentStyleSource
@@ -227,7 +219,7 @@ frontend:
     - name: UseContentSecurityHeader
       value: "False"
     - name: ContentFrameAncestors
-      value: "https://wtp-frontend.test.com"
+      value: "https://wtp-frontend.hii.or.th"
   autoscaling:
     enabled: false
     minReplicas: 1
@@ -245,7 +237,6 @@ frontend:
       cpu: 3000m
       memory: 4Gi
   service:
-    # name: wtp-frontend-svc
     type: ClusterIP
     ports:
       - name: http
@@ -270,6 +261,7 @@ dsapidb:
 
 dsapi:
   replicaCount: 1
+    # Overrides the image version.
   image:
     repository: dhiacrdev.azurecr.io/wrd/wrd-domain-services
     pullPolicy: IfNotPresent
@@ -296,7 +288,7 @@ dsapi:
     - name: Swagger__DocumentDescription
       value: "SwaggerInfo.md"
     - name: CORS
-      value: "localhost;wtp-frontend.test.com;mike-mine.mike-cloud-dev.com"
+      value: "wtp-frontend.hii.or.th"
   service:
       type: ClusterIP
       port: 80
@@ -310,10 +302,11 @@ dsapi:
 
 pyapi:
   replicaCount: 1
+    # Overrides the image version.
   image:
     repository: dhiacrdev.azurecr.io/wrd/wrdmainservices
     pullPolicy: IfNotPresent
-    tag: "20240516.1-dev"
+    tag: "20240606.7-dev"
   envs:
   service:
       type: ClusterIP
@@ -328,21 +321,22 @@ pyapi:
 
 geoserver:
   replicaCount: 1
+    # Overrides the image version.
   image:
     repository: docker.io/kartoza/geoserver
     pullPolicy: IfNotPresent
-    tag: "2.25.0"
+    tag: "2.23.2"
   envs:
     - name: COMMUNITY_EXTENSIONS
       value: "cog-plugin"
     - name: GEOSERVER_ADMIN_PASSWORD
-      value: "Geoserver123."
+      value: "win!geoserver2023"
     - name: GEOSERVER_ADMIN_USER
-      value: "admin"
+      value: "dhi-admin"
     - name: GEOSERVER_DATA_DIR
       value: "/opt/geoserver/data_dir"
     - name: HTTP_PROXY_NAME
-      value: "wtp-geoserver.test.com"
+      value: "wtp-geoserver.hii.or.th"
     - name: HTTP_SCHEME
       value: "https"
     - name: SSL
@@ -391,7 +385,6 @@ ingress:
   enabled: true
   className: "nginx"
   annotations: 
-    # nginx.ingress.kubernetes.io/add-header: "Content-Security-Policy: default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src 'self' fonts.gstatic.com;"
     # cert-manager.io/cluster-issuer: "selfsigned-issuer"
     # cert-manager.io/issuer: "letsencrypt-staging"
     nginx.ingress.kubernetes.io/proxy-body-size: 10m
@@ -401,63 +394,63 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: wtp-api.test.com
+    - host: wtp-api.hii.or.th
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-api-svc
             port: 80
-    - host: wtp-routerapi.test.com
+    - host: wtp-routerapi.hii.or.th
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-routerapi-svc
             port: 80            
-    - host: wtp-frontend.test.com
-      paths:
-        - path: /
-          pathType: Prefix
-          service:
-            name: dhiwtp-frontend-svc
-            port: 80      
-    - host: wtp-db.test.com
-      paths:
-        - path: /
-          pathType: Prefix
-          service:
-            name: dhiwtp-db-svc
-            port: 5432                 
-    - host: wtp-dsdb.test.com
+    # - host: wtp-frontend.hii.or.th
+    #   paths:
+    #     - path: /
+    #       pathType: Prefix
+    #       service:
+    #         name: dhiwtp-frontend-svc
+    #         port: 80      
+    # - host: wtp-db.hii.or.th
+    #   paths:
+    #     - path: /
+    #       pathType: Prefix
+    #       service:
+    #         name: dhiwtp-db-svc
+    #         port: 5432                 
+    - host: wtp-dsdb.hii.or.th
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-dsapidb-svc
             port: 5432
-    - host: wtp-dsapi.test.com
+    - host: wtp-dsapi.hii.or.th
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-dsapi-svc
             port: 80         
-    - host: wtp-pyapi.test.com
+    - host: wtp-pyapi.hii.or.th
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-pyapi-svc
             port: 80          
-    - host: wtp-geoserver.test.com
+    - host: wtp-geoserver.hii.or.th
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-geoserver-svc
             port: 80         
-    - host: xample.test.com
+    - host: xample.hii.or.th
       paths:
         - path: /
           pathType: Prefix
@@ -468,9 +461,7 @@ ingress:
    - secretName: dhiwtp-tls
   #  - secretName: letsencrypt-staging-tls
      hosts:
-      # - wtp-frontend.test.com
-      # - wtp-api.test.com
-      - "*.test.com"
+      - "*.hii.or.th"
 
 cert-manager: #defined by either the name or alias of your dependency in Chart.yaml
   enabled: false
