--- a/wtp/certs/openssl.cnf
+++ b/wtp/certs/openssl.cnf
@@ -11,7 +11,7 @@ ST = California
 L  = San Francisco
 O  = DHI
 OU = Water Tool
-CN = *.test.com
+CN = *.dd.com
 
 [ req_ext ]
 subjectAltName = @alt_names
@@ -23,5 +23,5 @@ keyUsage = critical, digitalSignature, cRLSign, keyCertSign
 extendedKeyUsage = serverAuth
 
 [ alt_names ]
-DNS.1 = *.test.com
-DNS.2 = test.com
+DNS.1 = *.dd.com
+DNS.2 = dd.com
