--- a/wtp/templates/apidb/postgres-pv-claim.yaml
+++ b/wtp/templates/apidb/postgres-pv-claim.yaml
@@ -9,6 +9,7 @@ metadata:
     app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
+  volumeName: {{ include "wtp.name" . }}-postgres-pv-volume
   storageClassName: manual
   accessModes:
     - ReadWriteOnce
