--- a/wtp/templates/apidb/postgres-pv-claim.yaml
+++ b/wtp/templates/apidb/postgres-pv-claim.yaml
@@ -4,11 +4,12 @@ metadata:
   name: {{ include "wtp.name" . }}-postgres-pv-claim
   labels:
     helm.sh/chart: {{ include "wtp.chart" . }}
-    app.kubernetes.io/name: {{ include "wtp.name" . }}-pv-claim
+    app.kubernetes.io/name: {{ include "wtp.name" . }}-postgres-pv-claim
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
+  volumeName: {{ include "wtp.name" . }}-postgres-pv-volume
   storageClassName: manual
   accessModes:
     - ReadWriteOnce
