--- a/wtp/templates/dsapidb/postgres-pv.yaml
+++ b/wtp/templates/dsapidb/postgres-pv.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     type: local
     helm.sh/chart: {{ include "wtp.chart" . }}
-    app.kubernetes.io/name: {{ include "wtp.name" . }}-ds-pv
+    app.kubernetes.io/name: {{ include "wtp.name" . }}-ds-postgres-pv
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
