--- a/wtp/templates/wrdmainsvc-py/pyapi-pv-claim.yaml
+++ b/wtp/templates/wrdmainsvc-py/pyapi-pv-claim.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ include "wtp.name" . }}-geoserver-pv-claim
+  name: {{ include "wtp.name" . }}-pyapi-pv-claim
   labels:
     helm.sh/chart: {{ include "wtp.chart" . }}
-    app.kubernetes.io/name: {{ include "wtp.name" . }}-geoserver-pv-claim
+    app.kubernetes.io/name: {{ include "wtp.name" . }}-pyapi-pv-claim
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}  
@@ -14,5 +14,5 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  volumeName: {{ include "wtp.name" . }}-geoserver-pv
+  volumeName: {{ include "wtp.name" . }}-pyapi-pv
   storageClassName: manual
