--- a/wtp/templates/wrdmainsvc-py/pyapi-pv.yaml
+++ b/wtp/templates/wrdmainsvc-py/pyapi-pv.yaml
@@ -1,19 +1,21 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ include "wtp.name" . }}-postgres-pv-volume
+  name: {{ include "wtp.name" . }}-pyapi-pv
   labels:
-    type: local
     helm.sh/chart: {{ include "wtp.chart" . }}
-    app.kubernetes.io/name: {{ include "wtp.name" . }}-postgres-pv-volume
+    app.kubernetes.io/name: {{ include "wtp.name" . }}-pyapi-pv
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}  
 spec:
   storageClassName: manual
   capacity:
     storage: 10Gi
   accessModes:
     - ReadWriteOnce
+  {{- if .Values.pyapi.volume.hostPath }}
   hostPath:
-    path: "/water-status-data"
+    path: {{ .Values.pyapi.volume.hostPath }}
+    type: DirectoryOrCreate
+  {{- end }}
