--- a/wtp/values.yaml
+++ b/wtp/values.yaml
@@ -39,7 +39,7 @@ wtpapi:
     - name: ASPNETCORE_ENVIRONMENT
       value: "Development"
     - name: ConnectionStrings__Default
-      value: "Host=dhiwtp-db-svc;Port=5432;Username=postgres;Password=1234;Database=wrddevdb;Include Error Detail=true;"
+      value: "Host=dhiwtp-db-svc;Port=5432;Username=postgres;Password=1234;Database=waterdss;Include Error Detail=true;"
     - name: App__CorsOrigins
       value: "https://wtp-frontend.hii.or.th,https://wtp-routerapi.hii.or.th,https://wtp-api.hii.or.th"
     - name: App__WebUrl
