--- a/wtp/templates/apidb/postgres-pv.yaml
+++ b/wtp/templates/apidb/postgres-pv.yaml
@@ -11,6 +11,7 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
   storageClassName: manual
+  persistentVolumeReclaimPolicy: Retain
   capacity:
     storage: 10Gi
   accessModes:
