--- a/wtp/templates/dsapidb/postgres-pv.yaml
+++ b/wtp/templates/dsapidb/postgres-pv.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     type: local
     helm.sh/chart: {{ include "wtp.chart" . }}
-    app.kubernetes.io/name: {{ include "wtp.name" . }}-ds-postgres-pv
+    app.kubernetes.io/name: {{ include "wtp.name" . }}-ds-postgres-pv-volume
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
@@ -14,6 +14,7 @@ spec:
   capacity:
     storage: 10Gi
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   hostPath:
-    path: "/water-status-data"
+    path: "/mnt/data"
+    # path: "/water-status-data/dsapidb-postgresql"
