--- a/wtp/templates/apidb/postgres-pv.yaml
+++ b/wtp/templates/apidb/postgres-pv.yaml
@@ -16,5 +16,5 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/apidb-postgresql"
+    path: "/mnt/apidb-data"
     # path: "/water-status-data/apidb-postgresql"
