--- a/wtp/templates/dsapidb/deployment.yaml
+++ b/wtp/templates/dsapidb/deployment.yaml
@@ -62,8 +62,8 @@ spec:
           value: "{{ .Values.dsapidb.postgresql.password }}"
         - name: POSTGRES_DB
           value: "postgres"
-        # - name: PGDATA
-        #   value: "/var/lib/postgresql/data/pgdata"
+        - name: PGDATA
+          value: "/var/lib/postgresql/data/pgdata"
         volumeMounts:
           - mountPath: /var/lib/postgresql/data
             # subPath: data
