--- a/wtp/values.yaml
+++ b/wtp/values.yaml
@@ -41,13 +41,13 @@ wtpapi:
     - name: ConnectionStrings__Default
       value: "Host=dhiwtp-db-svc;Port=5432;Username=postgres;Password=1234;Database=waterdss;Include Error Detail=true;"
     - name: App__CorsOrigins
-      value: "https://wtp-frontend.hii.or.th,https://wtp-routerapi.hii.or.th,https://wtp-api.hii.or.th"
+      value: "https://waterdss.odss.com,https://routerapi.waterdss.odss.com,https://api.waterdss.odss.com"
     - name: App__WebUrl
-      value: "https://wtp-frontend.hii.or.th,"
+      value: "https://waterdss.odss.com,"
     - name: PortalInfo__Container
-      value: "https://wtp-routerapi.hii.or.th"
+      value: "https://routerapi.waterdss.odss.com"
     - name: PortalInfo__Url
-      value: "https://wtp-routerapi.hii.or.th"
+      value: "https://routerapi.waterdss.odss.com"
     - name: Authentication__OpenId__ClientId
       value: "Water Tools"
     - name: Authentication__OpenId__Authority
@@ -55,13 +55,13 @@ wtpapi:
     - name: Authentication__OpenId__Api
       value: ""
     - name: PortalInfo__WorkspaceLandingPage
-      value: "https://wtp-frontend.hii.or.th/portal/workspaces/{0}"
+      value: "https://waterdss.odss.com/portal/workspaces/{0}"
     - name: PortalInfo__Dissemination__UnsubscribeLink
       value: "/subscriptions/unsubscribe?token={token}"
     - name: PortalInfo__Dissemination__ApprovalLink
       value: "/product/{product_id}/approval"
     - name: Authentication__JwtBearer__Issuer
-      value: "https://wtp-frontend.hii.or.th"
+      value: "https://waterdss.odss.com"
     - name: Authentication__JwtBearer__SecurityKey
       value: "WaterDssPortal_C421AAEE0D114E9CA"
     - name: Authentication__JwtBearer__IsEnabled
@@ -77,11 +77,11 @@ wtpapi:
     - name: Token__Key
       value: "Rahasia7xBro?!"
     - name: Token__Issuer
-      value: "https://wtp-frontend.hii.or.th"
+      value: "https://waterdss.odss.com"
     - name: Token__Expire
       value: "2"
     - name: Token__Audience
-      value: "https://wtp-frontend.hii.or.th"
+      value: "https://waterdss.odss.com"
     - name: Authentication__OpenId__ClientSecret
       value: ""
     - name: DeploymentType
@@ -153,7 +153,7 @@ wtprouterapi:
     - name: ASPNETCORE_ENVIRONMENT
       value: "Production"
     - name: CORS_ORIGINS
-      value: "https://wtp-frontend.hii.or.th"
+      value: "https://waterdss.odss.com"
     - name: OCELOT_DOWNSTREAM_SCHEME
       value: "http"
     - name: OCELOT_DOWNSTREAM_HOST
@@ -191,25 +191,25 @@ frontend:
     - name: Applications
       value: "mine;mine-result;mine-dashboard;subscriptions;workspaces;datamanagement;waterstatus;planningtools;mine-reco;mine-dama"
     - name: DefaultBaseURL
-      value: "https://wtp-api.hii.or.th"
+      value: "https://api.waterdss.odss.com"
     - name: DefaultBaseURLOld
-      value: "https://wtp-routerapi.hii.or.th"
+      value: "https://routerapi.waterdss.odss.com"
     - name: DefaultBaseURLGateway
-      value: "https://wtp-routerapi.hii.or.th"
+      value: "https://routerapi.waterdss.odss.com"
     - name: DefaultDomainServicesURL
-      value: "https://wtp-dsapi.hii.or.th"
+      value: "https://dsapi.waterdss.odss.com"
     - name: DefaultBaseURLPy
-      value: "https://wtp-pyapi.hii.or.th"
+      value: "https://pyapi.waterdss.odss.com"
     - name: ClientId
       value: "Water Tools"
     - name: Authority
       value: "https://login.mike-cloud-dev.com"
     - name: ContentDefaultSource
-      value: "wtp-frontend.hii.or.th;wtp-dsapi.hii.or.th;api.mapbox.com;mapsapp.azurewebsites.net;simulations.azurewebsites.net;www.youtube.com"
+      value: "waterdss.odss.com;dsapi.waterdss.odss.com;api.mapbox.com;mapsapp.azurewebsites.net;simulations.azurewebsites.net;www.youtube.com"
     - name: ContentConnectSource
-      value: "login.mike-cloud-dev.com;wtp-api.hii.or.th;wtp-routerapi.hii.or.th;wtp-dsapi.hii.or.th;api.mapbox.com;events.mapbox.com;wtp-geoserver.hii.or.th;ipv4.icanhazip.com;dhigroup.matomo.cloud; data:"
+      value: "login.mike-cloud-dev.com;api.waterdss.odss.com;routerapi.waterdss.odss.com;dsapi.waterdss.odss.com;api.mapbox.com;events.mapbox.com;geoserver.waterdss.odss.com;ipv4.icanhazip.com;dhigroup.matomo.cloud; data:"
     - name: ContentImageSource
-      value: "wtp-api.hii.or.th;wtp-routerapi.hii.or.th;api.mapbox.com;a.basemaps.cartocdn.com;b.basemaps.cartocdn.com;c.basemaps.cartocdn.com;d.basemaps.cartocdn.com"
+      value: "api.waterdss.odss.com;routerapi.waterdss.odss.com;api.mapbox.com;a.basemaps.cartocdn.com;b.basemaps.cartocdn.com;c.basemaps.cartocdn.com;d.basemaps.cartocdn.com"
     - name: ContentScriptSource
       value: "www.youtube.com;unpkg.com;api.mapbox.com;dhigroup.matomo.cloud "
     - name: ContentStyleSource
@@ -219,7 +219,7 @@ frontend:
     - name: UseContentSecurityHeader
       value: "False"
     - name: ContentFrameAncestors
-      value: "https://wtp-frontend.hii.or.th"
+      value: "https://waterdss.odss.com"
   autoscaling:
     enabled: false
     minReplicas: 1
@@ -288,7 +288,7 @@ dsapi:
     - name: Swagger__DocumentDescription
       value: "SwaggerInfo.md"
     - name: CORS
-      value: "wtp-frontend.hii.or.th"
+      value: "waterdss.odss.com"
   service:
       type: ClusterIP
       port: 80
@@ -338,7 +338,7 @@ geoserver:
     - name: GEOSERVER_DATA_DIR
       value: "/opt/geoserver/data_dir"
     - name: HTTP_PROXY_NAME
-      value: "wtp-geoserver.hii.or.th"
+      value: "geoserver.waterdss.odss.com"
     - name: HTTP_SCHEME
       value: "https"
     - name: SSL
@@ -396,63 +396,63 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: wtp-api.hii.or.th
+    - host: api.waterdss.odss.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-api-svc
             port: 80
-    - host: wtp-routerapi.hii.or.th
+    - host: routerapi.waterdss.odss.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-routerapi-svc
             port: 80            
-    - host: wtp-frontend.hii.or.th
+    - host: waterdss.odss.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-frontend-svc
             port: 80      
-    - host: wtp-db.hii.or.th
+    - host: apidb.waterdss.odss.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-db-svc
             port: 5432                 
-    - host: wtp-dsdb.hii.or.th
+    - host: dsapidb.waterdss.odss.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-dsapidb-svc
             port: 5432
-    - host: wtp-dsapi.hii.or.th
+    - host: dsapi.waterdss.odss.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-dsapi-svc
             port: 80         
-    - host: wtp-pyapi.hii.or.th
+    - host: pyapi.waterdss.odss.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-pyapi-svc
             port: 80          
-    - host: wtp-geoserver.hii.or.th
+    - host: geoserver.waterdss.odss.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-geoserver-svc
             port: 80         
-    - host: xample.hii.or.th
+    - host: xample.odss.com
       paths:
         - path: /
           pathType: Prefix
@@ -463,7 +463,7 @@ ingress:
    - secretName: dhiwtp-tls
   #  - secretName: letsencrypt-staging-tls
      hosts:
-      - "*.hii.or.th"
+      - "*.odss.com"
 
 cert-manager: #defined by either the name or alias of your dependency in Chart.yaml
   enabled: false
