--- a/wtp/templates/wrdmainsvc-py/deployment.yaml
+++ b/wtp/templates/wrdmainsvc-py/deployment.yaml
@@ -47,12 +47,12 @@ spec:
           volumeMounts:
             - mountPath: "/code/app/config/data"
               name: pyapi-volume
-      dnsPolicy: None
+      dnsPolicy: ClusterFirst
       dnsConfig:
         nameservers:
+          - 192.168.12.13
           - 8.8.8.8
-          - 8.8.4.4
-          - 1.1.1.1
+          - 1.1.1.1   
       volumes:
         - name: pyapi-volume
           persistentVolumeClaim:
