--- a/wtp/templates/dsapi/deployment.yaml
+++ b/wtp/templates/dsapi/deployment.yaml
@@ -43,4 +43,10 @@ spec:
           {{- with .Values.dsapi.envs }}
           env:
             {{- toYaml . | nindent 12 }}
-          {{- end }}          
+          {{- end }}       
+      dnsPolicy: ClusterFirst
+      dnsConfig:
+        nameservers:
+          - 8.8.8.8
+          - 8.8.4.4
+          - 1.1.1.1             
