--- a/wtp/templates/geoserver/deployment.yaml
+++ b/wtp/templates/geoserver/deployment.yaml
@@ -47,7 +47,13 @@ spec:
           {{- with .Values.geoserver.envs }}
           env:
             {{- toYaml . | nindent 12 }}
-          {{- end }}         
+          {{- end }}       
+      dnsPolicy: ClusterFirst
+      dnsConfig:
+        nameservers:
+          - 192.168.12.13
+          - 8.8.8.8
+          - 1.1.1.1             
       volumes:
         - name: geoserver-volume
           persistentVolumeClaim:
