--- a/wtp/values.yaml
+++ b/wtp/values.yaml
@@ -41,15 +41,15 @@ wtpapi:
     - name: ConnectionStrings__Default
       value: "Host=dhiwtp-db-svc;Port=5432;Username=postgres;Password=1234;Database=waterdss;Include Error Detail=true;"
     - name: App__CorsOrigins
-      value: "https://wtp-frontend.hii.or.th,https://wtp-routerapi.hii.or.th,https://wtp-api.hii.or.th"
+      value: "https://wtp-frontend.hlc.com,https://wtp-routerapi.hlc.com,https://wtp-api.hlc.com"
     - name: App__WebUrl
-      value: "https://wtp-frontend.hii.or.th"
+      value: "https://wtp-frontend.hlc.com"
     - name: App__WorkspaceLandingPage
-      value: "https://wtp-frontend.hii.or.th/portal/workspaces/{0}"      
+      value: "https://wtp-frontend.hlc.com/portal/workspaces/{0}"      
     - name: PortalInfo__Container
-      value: "https://wtp-routerapi.hii.or.th"
+      value: "https://wtp-routerapi.hlc.com"
     - name: PortalInfo__Url
-      value: "https://wtp-routerapi.hii.or.th"
+      value: "https://wtp-routerapi.hlc.com"
     - name: Authentication__OpenId__ClientId
       value: "Water Tools"
     - name: Authentication__OpenId__Authority
@@ -57,13 +57,13 @@ wtpapi:
     - name: Authentication__OpenId__Api
       value: ""
     - name: PortalInfo__WorkspaceLandingPage
-      value: "https://wtp-frontend.hii.or.th/portal/workspaces/{0}"
+      value: "https://wtp-frontend.hlc.com/portal/workspaces/{0}"
     - name: PortalInfo__Dissemination__UnsubscribeLink
       value: "/subscriptions/unsubscribe?token={token}"
     - name: PortalInfo__Dissemination__ApprovalLink
       value: "/product/{product_id}/approval"
     - name: Authentication__JwtBearer__Issuer
-      value: "https://wtp-frontend.hii.or.th"
+      value: "https://wtp-frontend.hlc.com"
     - name: Authentication__JwtBearer__SecurityKey
       value: "WaterDssPortal_C421AAEE0D114E9CA"
     - name: Authentication__JwtBearer__IsEnabled
@@ -79,11 +79,11 @@ wtpapi:
     - name: Token__Key
       value: "Rahasia7xBro?!"
     - name: Token__Issuer
-      value: "https://wtp-frontend.hii.or.th"
+      value: "https://wtp-frontend.hlc.com"
     - name: Token__Expire
       value: "2"
     - name: Token__Audience
-      value: "https://wtp-frontend.hii.or.th"
+      value: "https://wtp-frontend.hlc.com"
     - name: Authentication__OpenId__ClientSecret
       value: ""
     - name: DeploymentType
@@ -155,7 +155,7 @@ wtprouterapi:
     - name: ASPNETCORE_ENVIRONMENT
       value: "Production"
     - name: CORS_ORIGINS
-      value: "https://wtp-frontend.hii.or.th"
+      value: "https://wtp-frontend.hlc.com"
     - name: OCELOT_DOWNSTREAM_SCHEME
       value: "http"
     - name: OCELOT_DOWNSTREAM_HOST
@@ -193,25 +193,25 @@ frontend:
     - name: Applications
       value: "mine;mine-result;mine-dashboard;subscriptions;workspaces;datamanagement;waterstatus;planningtools;mine-reco;mine-dama"
     - name: DefaultBaseURL
-      value: "https://wtp-api.hii.or.th"
+      value: "https://wtp-api.hlc.com"
     - name: DefaultBaseURLOld
-      value: "https://wtp-routerapi.hii.or.th"
+      value: "https://wtp-routerapi.hlc.com"
     - name: DefaultBaseURLGateway
-      value: "https://wtp-routerapi.hii.or.th"
+      value: "https://wtp-routerapi.hlc.com"
     - name: DefaultDomainServicesURL
-      value: "https://wtp-dsapi.hii.or.th"
+      value: "https://wtp-dsapi.hlc.com"
     - name: DefaultBaseURLPy
-      value: "https://wtp-pyapi.hii.or.th"
+      value: "https://wtp-pyapi.hlc.com"
     - name: ClientId
       value: "Water Tools"
     - name: Authority
       value: "https://login.mike-cloud-dev.com"
     - name: ContentDefaultSource
-      value: "wtp-frontend.hii.or.th;wtp-dsapi.hii.or.th;api.mapbox.com;mapsapp.azurewebsites.net;simulations.azurewebsites.net;www.youtube.com"
+      value: "wtp-frontend.hlc.com;wtp-dsapi.hlc.com;api.mapbox.com;mapsapp.azurewebsites.net;simulations.azurewebsites.net;www.youtube.com"
     - name: ContentConnectSource
-      value: "login.mike-cloud-dev.com;wtp-api.hii.or.th;wtp-routerapi.hii.or.th;wtp-dsapi.hii.or.th;api.mapbox.com;events.mapbox.com;wtp-geoserver.hii.or.th;ipv4.icanhazip.com;dhigroup.matomo.cloud; data:"
+      value: "login.mike-cloud-dev.com;wtp-api.hlc.com;wtp-routerapi.hlc.com;wtp-dsapi.hlc.com;api.mapbox.com;events.mapbox.com;wtp-geoserver.hlc.com;ipv4.icanhazip.com;dhigroup.matomo.cloud; data:"
     - name: ContentImageSource
-      value: "wtp-api.hii.or.th;wtp-routerapi.hii.or.th;api.mapbox.com;a.basemaps.cartocdn.com;b.basemaps.cartocdn.com;c.basemaps.cartocdn.com;d.basemaps.cartocdn.com"
+      value: "wtp-api.hlc.com;wtp-routerapi.hlc.com;api.mapbox.com;a.basemaps.cartocdn.com;b.basemaps.cartocdn.com;c.basemaps.cartocdn.com;d.basemaps.cartocdn.com"
     - name: ContentScriptSource
       value: "www.youtube.com;unpkg.com;api.mapbox.com;dhigroup.matomo.cloud "
     - name: ContentStyleSource
@@ -221,7 +221,7 @@ frontend:
     - name: UseContentSecurityHeader
       value: "False"
     - name: ContentFrameAncestors
-      value: "https://wtp-frontend.hii.or.th"
+      value: "https://wtp-frontend.hlc.com"
   autoscaling:
     enabled: false
     minReplicas: 1
@@ -290,7 +290,7 @@ dsapi:
     - name: Swagger__DocumentDescription
       value: "SwaggerInfo.md"
     - name: CORS
-      value: "wtp-frontend.hii.or.th"
+      value: "wtp-frontend.hlc.com"
   service:
       type: ClusterIP
       port: 80
@@ -340,7 +340,7 @@ geoserver:
     - name: GEOSERVER_DATA_DIR
       value: "/opt/geoserver/data_dir"
     - name: HTTP_PROXY_NAME
-      value: "wtp-geoserver.hii.or.th"
+      value: "wtp-geoserver.hlc.com"
     - name: HTTP_SCHEME
       value: "https"
     - name: SSL
@@ -399,74 +399,74 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: wtp-api.hii.or.th
+    - host: wtp-api.hlc.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-api-svc
             port: 80
-    - host: wtp-routerapi.hii.or.th
+    - host: wtp-routerapi.hlc.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-routerapi-svc
             port: 80            
-    - host: wtp-frontend.hii.or.th
+    - host: wtp-frontend.hlc.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-frontend-svc
             port: 80      
-    - host: wtp-db.hii.or.th
+    - host: wtp-db.hlc.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-db-svc
             port: 5432                 
-    - host: wtp-dsdb.hii.or.th
+    - host: wtp-dsdb.hlc.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-dsapidb-svc
             port: 5432
-    - host: wtp-dsapi.hii.or.th
+    - host: wtp-dsapi.hlc.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-dsapi-svc
             port: 80         
-    - host: wtp-pyapi.hii.or.th
+    - host: wtp-pyapi.hlc.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-pyapi-svc
             port: 80          
-    - host: wtp-geoserver.hii.or.th
+    - host: wtp-geoserver.hlc.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-geoserver-svc
             port: 80         
-    - host: xample.test.com
+    - host: xample.hlc.com
       paths:
         - path: /
           pathType: Prefix
           service:
             name: dhiwtp-xample-svc
             port: 80                        
-  tls: #[]
-   - secretName: dhiwtp-tls
-  #  - secretName: letsencrypt-staging-tls
-     hosts:
-      - "*.hii.or.th"
+  # tls: #[]
+  #  - secretName: dhiwtp-tls
+  # #  - secretName: letsencrypt-staging-tls
+  #    hosts:
+  #     - "*.hlc.com"
 
 cert-manager: #defined by either the name or alias of your dependency in Chart.yaml
   enabled: false
