--- a/calico.yaml
+++ b/calico.yaml
@@ -47,7 +47,7 @@ data:
   # Typha is disabled.
   typha_service_name: "none"
   # Configure the backend to use.
-  calico_backend: "bird"
+  calico_backend: "vxlan"
 
   # Configure the MTU to use for workload interfaces and tunnels.
   # By default, MTU is auto-detected, and explicitly setting this field should not be required.
@@ -4926,10 +4926,10 @@ spec:
               value: "autodetect"
             # Enable IPIP
             - name: CALICO_IPV4POOL_IPIP
-              value: "Always"
+              value: "Never"
             # Enable or Disable VXLAN on the default IP pool.
             - name: CALICO_IPV4POOL_VXLAN
-              value: "Never"
+              value: "Always"
             # Enable or Disable VXLAN on the default IPv6 IP pool.
             - name: CALICO_IPV6POOL_VXLAN
               value: "Never"
@@ -4983,7 +4983,7 @@ spec:
               command:
               - /bin/calico-node
               - -felix-live
-              - -bird-live
+              # - -bird-live
             periodSeconds: 10
             initialDelaySeconds: 10
             failureThreshold: 6
@@ -4993,7 +4993,7 @@ spec:
               command:
               - /bin/calico-node
               - -felix-ready
-              - -bird-ready
+              # - -bird-ready
             periodSeconds: 10
             timeoutSeconds: 10
           volumeMounts:
